; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-filters/extr_scroll-filter.c_scroll_filter_show.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-filters/extr_scroll-filter.c_scroll_filter_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scroll_filter_data = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { float, float }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @scroll_filter_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @scroll_filter_show(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.scroll_filter_data*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.scroll_filter_data*
  store %struct.scroll_filter_data* %5, %struct.scroll_filter_data** %3, align 8
  %6 = load %struct.scroll_filter_data*, %struct.scroll_filter_data** %3, align 8
  %7 = getelementptr inbounds %struct.scroll_filter_data, %struct.scroll_filter_data* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  store float 0.000000e+00, float* %8, align 4
  %9 = load %struct.scroll_filter_data*, %struct.scroll_filter_data** %3, align 8
  %10 = getelementptr inbounds %struct.scroll_filter_data, %struct.scroll_filter_data* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 1
  store float 0.000000e+00, float* %11, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
